@@ -1,8 +1,5 @@
 AUX hg_pull.trac_0.12.patch 468 RMD160 8bfd2ec1c64fbfb9ad5e4e87ef24c85f8157a63f SHA1 9eec2b8ed02bc21214e6c3ca8a6d450c11f1887d SHA256 0c96661f348a64b0befb1fd851ca87424b6696152df4d61249abbb6e8752491e
-DIST Bitten-0.6b2.tar.gz 355500 RMD160 7df0c59638fdb72c167c8af77d3c18f909482cb8 SHA1 8702d43d52466f2c245aa669e36673728a56fc62 SHA256 47f3a4d6031f67ce66edece38d56a9eae26a1b6b57df786b23a89aaa579f710c
 DIST Bitten-0.6b3.tar.gz 338511 RMD160 cb808a0afc9da1f2312ea2845c257a9faa60dcd4 SHA1 a03c28a245af38aa14793ddd39fd4d826d6e3589 SHA256 d3167fe928bb8d61e4367d71a6c286915c58f435b155c1886e0fea141f0501a8
-EBUILD bitten-0.6_beta2.ebuild 903 RMD160 e8df6328cf4f62884dd06aa920bf75637e1ff59c SHA1 9ccebf1a193066eff7597c7314e9a16849866f0c SHA256 4cc3fd62cc597882f3c53ee27185b26af7c5840ced217a0a17a6d693e11b654a
 EBUILD bitten-0.6_beta3-r1.ebuild 961 RMD160 2fe10cbcaaf89812b4911d7fb3a90ceb20fce940 SHA1 f34e213c9c00fab278453140845e5543165424b5 SHA256 29a97c8f8764d9c3d1b01fe1f19d8b5ed08d0465ed791b887eb1c46dae8bc9f0
-EBUILD bitten-0.6_beta3.ebuild 896 RMD160 2f33cb45375b032b427064da50f2838e01cefb3c SHA1 2a919b4f27a4bba72c32d8a9dffe3c095b03d2cf SHA256 7d6e517724b2d7e09ad0029f7f2d18cb12502196b8cabc86fdf87afc9884cc9a
-MISC ChangeLog 537 RMD160 92607fb787ec44abe3b2333b881d4b75936abc72 SHA1 5c2bc5dc989cec96fbb891015a26e5b6f1672a49 SHA256 edde46281aff15e9fa9aff86e797823bb797af86ef93b885aa80febf02e9fe4e
+MISC ChangeLog 673 RMD160 d1c6feca6f767c59a95484e57697a6e81afe920c SHA1 9a8a6306d5324c29bf2282d82e960edc8d87b268 SHA256 28798325647de7588a02358ff7d2772348e2f3e1c2adfd85989446a6164cc6fd
 MISC metadata.xml 283 RMD160 fbdf85ee235622cdd6958f5d402251f93cf39dd2 SHA1 34527d72689b8c81db986804c5731733b0fe2c50 SHA256 3b3cb322bf5e1794eca29ea417a568842380e3e597f7ce2d108456cac357795e
